completed contact page and individualized all section margins and p-tag margins; fixed alot of spacing issues

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    margin-bottom: 10rem;
+    margin: 9rem 4% 12rem;
 }
 
 /* scroll top  */
