--- a/styles/Carousel.module.css
+++ b/styles/Carousel.module.css
@@ -38,6 +38,7 @@
     border: none;
     cursor: pointer;
     margin-top: 20px;
+    font-size: var(--h2-font);
 }
 
 .indicators {
