--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,5 +38,5 @@ span {
 }
 
 section {
-    padding: 9rem 4% 2%;
+    padding: 0 4% 0;
 }
